@@ -1,3 +1,8 @@
+2012-12-02 Molnar Karoly <molnarkaroly AT users.sf.net>
+	* support/scripts/cinc2h.pl,
+	  support/scripts/pic14-header-parser.pl,
+	  support/scripts/pic16-header-parser.pl: I changed the copyright.
+
 2012-12-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCC.y (labeled_statement): fixed bug #3590884
